<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
            android:layout_marginStart="@dimen/start_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/custom_style" >
        <ImageView
                android:id="@+id/pic_position"
                android:src="@drawable/happy_rodger"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_width="@dimen/pic_size"
                android:layout_height="@dimen/pic_size"
                style="@style/custom_style" />
        <TextView
                android:id="@+id/tv_position_des"
                android:text="@string/position_name"
                android:layout_toEndOf="@id/pic_position"
                android:layout_alignTop="@id/pic_position"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pic_size"
                android:layout_marginTop="0dp"
                style="@style/custom_style"/>
        <ImageView
                android:id="@+id/pic_hobby"
                android:src="@drawable/rum_ic2"
                android:layout_below="@id/pic_position"
                android:layout_width="@dimen/pic_size"
                android:layout_height="@dimen/pic_size"
                style="@style/custom_style"/>
        <TextView
                android:id="@+id/tv_hobby_des"
                android:text="@string/hobby"
                android:layout_toEndOf="@id/pic_hobby"
                android:layout_alignTop="@id/pic_hobby"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pic_size"
                android:layout_marginTop="0dp"
                style="@style/custom_style"/>
        <ImageView
                android:id="@+id/pic_special"
                android:src="@drawable/treasure_map"
                android:layout_below="@id/pic_hobby"
                android:layout_width="@dimen/pic_size"
                android:layout_height="@dimen/pic_size"
                style="@style/custom_style"/>
        <TextView
                android:id="@+id/tv_special_des"
                android:text="@string/special_description"
                android:layout_toEndOf="@id/pic_special"
                android:layout_alignTop="@id/pic_special"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pic_size"
                android:layout_marginTop="0dp"
                style="@style/custom_style"/>
    </RelativeLayout>
    <View
            android:id="@+id/view_divider_top"
            android:background="@color/crimson_red"
            android:layout_below="@id/tv_special_des"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/start_margin"
            style="@style/custom_style"/>
    <TextView
            android:id="@+id/tv_bio"
            android:text="@string/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            style="@style/custom_style"/>
    <View
            android:id="@+id/view_divider_bot"
            android:background="@color/crimson_red"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/start_margin"
            style="@style/custom_style"/>
    <EditText
            android:id="@+id/et_message"
            android:hint="@string/enter_a_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            style="@style/custom_style"/>
    <Button
            android:id="@+id/btn_send"
            android:text="@string/send_message"
            android:background="#FFFFFF"
            android:layout_gravity="end"
            android:textColor="@color/crimson_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/def_margin"
            android:layout_marginStart="@dimen/start_margin"
            style="@style/custom_style"/>
</LinearLayout>